--- a/org/meta/default/default.css
+++ b/org/meta/default/default.css
@@ -1,20 +1,16 @@
 /*-Default element style (use together with reset.css)-*/
 
 	/*Body*/
-	
+
+	/**
+	* The `height: 100%` makes the rendered content of the document span the entire screen.
+	*/
+	html { height: 100%; }
 	body {
-			display: block;
-			position: absolute;
-			height: 100%;
-			width: 100%;
-/*
-			background-color: rgb(25,25,25);
-			overflow: hidden;
-*/
 			font-size: 1em;
 	}
 	
-	/*Tables*/
+	/*Tables*
 
 	.element-table thead {
 			border-bottom: 0.1em solid black;
@@ -46,22 +42,41 @@
 	
 	/*Forms.*/
 	
-	form textarea,
-	form input[type="text"],
-	form input[type="password"] {
-			overflow: auto;
-			/*Removes the overflow from 100% width textareas.*/
-			-webkit-box-sizing: border-box;
-			-moz-box-sizing: border-box;
-			box-sizing: border-box;
-			resize: none;
-			cursor: text;
+	.form { }
+	.form label,
+	.form select,
+	.form textarea {
+			display: block;
+			margin-top: 0.5em;
 	}
-	
+	.form select,
+	.form textarea,
+	.form input[type="password"],
+	.form input[type="text"] {
+			padding: 0.5em;
+			width: 100%;
+			font-size: 1em;
+			line-height: 1.25em;
+			background-color: #fff;
+			border: 1px solid #373737;
+	}
+	.form button {
+			margin-top: 0.5em;
+	}
+
 	/*Buttons.*/
 
 	button,
 	input[type="submit"]
 	{
 		cursor: pointer;
+	}
+
+	.button {
+		display: inline;
+		padding: 0.25em 1em;
+		border: 0.1em solid black;
+		font-size: inherit;
+		background-color: transparent;
+		color: black;
 	}
